# frogjump

./: .gitignore  GODOT_COPYRIGHT.md  LICENSE  README.md
godot/: Main.tscn  alligator.tscn  alligator_level.tscn  arrow.tscn  bonus_fly.tscn  button.tscn  dragon_fly.tscn  export_presets.cfg  fake_player.tscn  fly.tscn  frog_spritesheet.webp.import  icon.webp.import  level.tscn  main.tscn  player.tscn  project.godot  swarm.tscn  test_alligator.tscn  test_corner.tscn  tile_set.tres  toucan.tscn  tutorial.tscn  wall.tscn
godot/assets/: fly_frames.png.import  frog_jump_tiles.png.import
godot/audio/: thom_cookes__barham_rainforest_atmos2.info  thom_cookes__barham_rainforest_atmos2.mp3.import
godot/button/: LICENSE.md  pushthebutton.svg.import
godot/dragonfly/: LICENSE.md  dragonfly.png.import
godot/experimental/: Target.png.import  aim_practice.tscn  target.tscn
godot/frog_ezgif/: blink000.png.import  blink001.png.import  blink002.png.import  blink003.png.import
godot/kenney_assets/: License.txt  vector_complete.svg.import
godot/leon_assets/: Alligator_frames.png.import  Toucan sprite.png.import  Toucan tail.png.import  alligator_eyebrows.png.import  alligator_lower_jaw.png.import  fly_frames.png.import  frog_jump_tiles.png.import
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/src/: alligator.rs  arrow.rs  button_hint.rs  direction.rs  dragon_fly.rs  fly.rs  jump_handler.rs  jump_meter.rs  landing_surface.rs  level.rs  lib.rs  log.rs  main_node.rs  math.rs  message_screen.rs  player.rs  steal_enter.rs  test_alligator.rs  toucan.rs  tutorial.rs
(+81 files in other folders)
