[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies.godot]
git = "https://github.com/Yarwin/gdext"
branch = "fix-docs-not-generating-if-only-variables-are-present"
features = ["experimental-wasm", "lazy-function-tables", "register-docs"]
